compiler/plc_xml/src/xml_parser/snapshots/plc_xml__xml_parser__tests__ast_generates_locations-2.snap
---
source: compiler/plc_xml/src/xml_parser/tests.rs
expression: right.get_location()
---
SourceLocation {
    span: Block {
        local_id: 1,
        execution_order: None,
        inner_range: Some(
            0..1,
        ),
    },
    file: Some(
        "<internal>.cfc",
    ),
}
