compiler/plc_xml/src/xml_parser/snapshots/plc_xml__xml_parser__tests__ast_generates_locations-4.snap
---
source: compiler/plc_xml/src/xml_parser/tests.rs
expression: operator.get_location()
---
SourceLocation {
    span: Block {
        local_id: 3,
        execution_order: Some(
            1,
        ),
        inner_range: None,
    },
    file: Some(
        "<internal>.cfc",
    ),
}
