compiler/plc_xml/src/xml_parser/snapshots/plc_xml__xml_parser__tests__ast_generates_locations.snap
---
source: compiler/plc_xml/src/xml_parser/tests.rs
expression: left.get_location()
---
SourceLocation {
    span: Block {
        local_id: 2,
        execution_order: Some(
            0,
        ),
        inner_range: Some(
            0..1,
        ),
    },
    file: Some(
        "<internal>.cfc",
    ),
}
