compiler/plc_xml/src/xml_parser/snapshots/plc_xml__xml_parser__tests__conditional_return_without_connection.snap
---
source: compiler/plc_xml/src/xml_parser/tests.rs
expression: diagnostics
---
[
    Diagnostic {
        message: "Control statement has no connection",
        primary_location: SourceLocation {
            span: Block {
                local_id: 2,
                execution_order: Some(
                    0,
                ),
                inner_range: None,
            },
            file: Some(
                "test.cfc",
            ),
        },
        secondary_locations: None,
        severity: Error,
        error_code: "E081",
        sub_diagnostics: [],
        internal_error: None,
    },
]
