compiler/plc_xml/src/xml_parser/snapshots/plc_xml__xml_parser__tests__unassociated_connections.snap
---
source: compiler/plc_xml/src/xml_parser/tests.rs
expression: diagnostics
---
[
    Diagnostic {
        message: "Expected a corresponding source-connection mark for sink 's2', but could not find one.",
        primary_location: SourceLocation {
            span: Block {
                local_id: 3,
                execution_order: None,
                inner_range: None,
            },
            file: Some(
                "test",
            ),
        },
        secondary_locations: None,
        severity: Error,
        error_code: cfc__no_associated_connector,
        sub_diagnostics: [],
        internal_error: None,
    },
]
