compiler/plc_xml/src/xml_parser/snapshots/plc_xml__xml_parser__tests__unconnected_connections.snap
---
source: compiler/plc_xml/src/xml_parser/tests.rs
expression: diagnostics
---
[
    Diagnostic {
        message: "Source 's1' is not connected.",
        primary_location: SourceLocation {
            span: Block {
                local_id: 1,
                execution_order: None,
                inner_range: None,
            },
            file: Some(
                "test",
            ),
        },
        secondary_locations: None,
        severity: Error,
        error_code: "E084",
        sub_diagnostics: [],
        internal_error: None,
    },
]
